welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: not found: value vuBiscuit
  if (vuBiscuit == true) {
      ^