welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (i <-1 to 6){
    avance();
  }
  for (l <- 1 to 6){
    recule();
  }
  if (vuBiscuit == true) {
    return true
  }
  else {
    return false
  }
}